# tower-game

./: .dockerignore  .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  COMMON-ERRORS.md  DECISIONS.md  ERRORS.md  IMPROVEMENTS.md  PROGRESS.md  TECH-STACK.md  TOWERMAPWIDGET_QUICKSTART.md  TOWERMAPWIDGET_SUMMARY.md  docker-compose.yml  dopopensource.txt  index.html  test_output.txt  tower_game.code-workspace
.claude/: settings.local.json
bevy-server/: ARCHITECTURE.md  Cargo.toml  Dockerfile  build.rs  test_metrics.ps1  test_metrics.sh
bevy-server/benches/: cache_comparison_benchmarks.rs  floor_generation.rs
bevy-server/src/: async_generation.rs  combat.rs  components.rs  destruction.rs  dynamic_scaling.rs  ecs_bridge.rs  ffi.rs  hybrid_generation.rs  input.rs  lib.rs  lmdb_cache.rs  loot.rs  main.rs  metrics.rs  monster_gen.rs  physics.rs  proto.rs  proto_test.rs  semantic_tags.rs  wfc.rs
bevy-server/src/api/: combat.rs  destruction.rs  economy.rs  game_state.rs  generation.rs  mastery.rs  mod.rs
bevy-server/src/storage/: lmdb_repo_adapter.rs  lmdb_templates.rs  migrations.rs  mod.rs  plugin.rs  postgres.rs  postgres_repo_adapter.rs  repository.rs  seed_data.rs
bevy-server/tests/: api_smoke_test.rs  e2e_integration_tests.rs  semantic_integration_tests.rs  storage_integration_tests.rs  ue5_api_contract_test.rs
bevy-test-client/: Cargo.toml
bevy-test-client/src/: http_load_test.rs  main.rs  stress_test.rs
bugfix_engine/: fix_ue5_RUN_AS_ADMIN.bat  fix_ue5_compiler.ps1  fix_ue5_compiler_v2.ps1  fix_ue5_correct.ps1  fix_ue5_final.ps1  fix_ue5_simple.ps1
config/: engine.json
docs/: ARCHITECTURE.md  ARCHITECTURE_V2_ANALYSIS.md  ARCHITECTURE_V2_IMPLEMENTATION_DETAILS.md  ASYNC_GENERATION_SUMMARY.md  COORDINATE_CONVERSION.md  DECISIONS.md  DEPLOYMENT.md  ENTITY_MODEL.md  ERRORS.md  FIRST_LAUNCH_GUIDE.md  HTTP-API-REFERENCE.md  INTEGRATION_PROGRESS.md  INTEGRATION_STATUS_REPORT.md  LMDB_CACHE_BENCHMARKS.md  NETWORKING.md  PERFORMANCE_METRICS.md  PROGRESS.md  PROJECT-PLAN.md  PROJECT_REORGANIZATION.md  PROTOBUF_SETUP.md  REDIS_BENCHMARKS_ANALYSIS.md  REORGANIZATION_CHECKLIST.md  SEMANTIC_TAG_SYSTEM.md  SESSION26_COMPILATION_SUMMARY.md  SESSION26_FINAL_SUMMARY.md  SESSION26_SUMMARY.md  SESSION27_SUMMARY.md  SESSION_28_CONTINUATION_SUMMARY.md  SESSION_SEMANTIC_TAGS_SUMMARY.md  STRESS_TEST_REPORT.md  TECH-STACK.md  TOWERMAPWIDGET_CODESNIPPETS.md  TOWERMAPWIDGET_IMPLEMENTATION.md  TOWERMAPWIDGET_INDEX.md  api-reference.md  (+3 more)
procedural-core/: Cargo.toml  build.rs  tower_core.def
procedural-core/.cargo/: config.toml
procedural-core/benches/: generation_bench.rs
procedural-core/src/: constants.rs  lib.rs  main.rs
procedural-core/src/abilities/: mod.rs
procedural-core/src/achievements/: mod.rs
procedural-core/src/aerial/: mod.rs
procedural-core/src/analytics/: mod.rs
procedural-core/src/anticheat/: mod.rs
procedural-core/src/balance/: mod.rs
procedural-core/src/bridge/: mod.rs
procedural-core/src/combat/: defense.rs  hitbox.rs  mod.rs  status.rs  weapons.rs
procedural-core/src/cosmetics/: mod.rs
procedural-core/src/death/: mod.rs
procedural-core/src/economy/: crafting.rs  mod.rs
procedural-core/src/engine/: config.rs  helpers.rs  hybrid.rs  messages.rs  mod.rs  plugin.rs
procedural-core/src/engine/services/: combat.rs  economy.rs  game_state.rs  generation.rs  mastery.rs  mod.rs
procedural-core/src/equipment/: mod.rs
procedural-core/src/events/: mod.rs
procedural-core/src/faction/: mod.rs  npcs.rs
procedural-core/src/gameflow/: mod.rs
procedural-core/src/generation/: floor_manager.rs  mod.rs  wfc.rs
procedural-core/src/hotreload/: mod.rs
procedural-core/src/logging/: mod.rs
procedural-core/src/loot/: mod.rs
procedural-core/src/mastery/: mod.rs
procedural-core/src/monster/: ai.rs  mod.rs
procedural-core/src/movement/: mod.rs
procedural-core/src/mutators/: mod.rs
procedural-core/src/player/: inventory.rs  mod.rs
procedural-core/src/replay/: mod.rs
procedural-core/src/replication/: mod.rs
procedural-core/src/savemigration/: mod.rs
procedural-core/src/seasons/: mod.rs
procedural-core/src/semantic/: mod.rs
procedural-core/src/social/: mod.rs
procedural-core/src/sockets/: mod.rs
procedural-core/src/specialization/: mod.rs
procedural-core/src/towermap/: mod.rs
procedural-core/src/tutorial/: mod.rs
procedural-core/src/visualization/: mod.rs
procedural-core/src/world/: mod.rs
procedural-core/tests/: edge_cases.rs  ffi_stress.rs  json_roundtrip.rs  property_tests.proptest-regressions  property_tests.rs
(+169 files in other folders)
