[package]
name = "bevy-test-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stress_test"
path = "src/stress_test.rs"

[[bin]]
name = "http_load_test"
path = "src/http_load_test.rs"

[dependencies]
# Bevy core (minimal for testing)
bevy = { version = "0.15.3", default-features = false, features = [
    "bevy_state",
    "multi_threaded",
] }

# Networking - Client side
bevy_replicon = "0.30"
bevy_replicon_renet = "0.7"

# Serialization (must match server)
serde = { version = "1.0", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# HTTP load testing
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.41", features = ["rt-multi-thread", "sync", "time", "macros"] }
serde_json = "1.0"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
