[package]
name = "tower-procedural-core"
version = "0.1.0"
edition = "2021"
description = "Procedural core for Tower MMORPG - semantic graph, generation, combat logic"

[lib]
name = "tower_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# ECS Game Engine
# Note: dynamic_linking removed for DLL builds - it conflicts with cdylib exports
bevy = "0.15"

# Physics & Collisions
bevy_rapier3d = "0.28"

# Semantic Graph
petgraph = "0.7"

# Procedural Noise
noise = "0.9"

# Deterministic RNG
rand = "0.8"
rand_xoshiro = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ron = "0.8"

# Error Handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Hashing (for seed + delta)
sha3 = "0.10"

# Parallel computation (Monte-Carlo balance)
rayon = "1.10"

# File watching for hot-reload
notify = "6"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"
tempfile = "3"

[[bench]]
name = "generation_bench"
harness = false

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
# CRITICAL: Disable LTO to preserve all FFI exports in DLL
lto = false
# Do NOT strip symbols - we need them for DLL exports
strip = "none"
# Optimize for speed (opt-level 3 is default for release)
opt-level = 3
# Single codegen unit for better optimization of non-exported code
codegen-units = 1
# Panic abort for smaller binary size
panic = "abort"
